--- a/mobs.html
+++ b/mobs.html
@@ -3,29 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport">
-    <title>SwordPixelOnline Wiki</title>
+    <title>Sword Pixel Online - Mobs</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="menu.js"></script>
 </head>
 <body>
     <header>
         <div class="navbar">
             <h1>LOGO</h1>
-
-            <ul>
-				<li>
-					<a href="wiki.html">HOME</a>
-				</li>
-				<li class="selected">
-					<a href="monsters.html">MONSTERS</a>
-				</li>
-			</ul>
-
-            <button onclick="window.location.href='https://sword-pixel-online.com'">PLAY</button>
         </div>
     </header>
     <main>
         <div class="image">
-            <h1 style="margin: 0;">Monsters page</h1>
+            <h1 style="margin: 0;">Mobs</h1>
         </div>
         <div class="mainContainer">
             <h2>Floor 1</h2>
