refactor: mobs page style

--- a/mobs.html
+++ b/mobs.html
@@ -24,12 +24,12 @@
 
 		<div style="display: none">
 			<div id="mob_card" class="card">
+				<h3 id="mob_name"></h3>
 				<img class="monsterImg" />
 
-				<h3 id="mob_name"></h3>
 				<p id="description">Description... <br /></p>
 				Drops:
-				<div id="drops" class="row"></div>
+				<div id="drops"></div>
 			</div>
 		</div>
 
